Added some test pages

--- a/main.html
+++ b/main.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-    @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
-
-
-        * {
+* {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: "DM Sans", sans-serif;
         }
 
         body {
@@ -134,11 +130,27 @@
         }
 
         }
+
+        .section-1 {
+            position: relative;
+            width: 100%;
+        }
+
+        
+
+        .Container img {
+            width: 100%;
+            height: auto;
+            display: block;
+            height: auto;
+            filter: brightness(50%);
+            -webkit-filter: brightness(50%);
+        }
+
+
+
     </style>
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
     <div id="main">
@@ -169,6 +181,13 @@
                 <h4>Packages</h4>
     
                 <i class="ri-close-line"></i>
+            </div>
+        </div>
+
+
+        <div class="section-1">
+            <div class="Container">
+                <img src="Assets\pexels-arunothayan-rengan-sivasamy-279979277-20304884 (1).jpg" alt="">
             </div>
         </div>
     </div>
